Added Read Me doc and test cases