@@ -6,14 +6,16 @@ import com.fedex.aggregatorservice.service.AggregateService;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.springframework.http.ResponseEntity;
 
-import java.util.*;
-import java.util.concurrent.CompletableFuture;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static org.junit.Assert.assertEquals;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -22,10 +24,13 @@ public class AggregateControllerTest {
     @InjectMocks
     private AggregateController aggregateController;
 
+    @Mock
     private AggregateService aggregateService;
 
     @Before
     public void setup() {
+
+        MockitoAnnotations.initMocks(this);
         this.aggregateService = mock(AggregateService.class);
         this.aggregateController = new AggregateController(aggregateService);
     }
@@ -33,36 +38,51 @@ public class AggregateControllerTest {
     @Test
     public void getAllApiResponse() throws Throwable {
         //GIVEN
-        List<Long> shipmentOrderNumber = List.of(111111111L,22222222L);
-        List<Long> trackNumber = null;
-        List<String> pricing = List.of("UK","IN","FR");
-        String shipmentResponseString = "[\"BOX\",\"ENVELOPE\"]";
-        String pricingResponseString = "[\"DELIVERING\"]";
-        List<Object> shipmentServiceResponse = Arrays.asList("BOX","ENVELOPE");
+        List<Long> orderNumber = List.of(111111111L);
+        List<String> pricing = List.of("UK", "IN", "FR");
+        List<Object> shipmentServiceResponse = Arrays.asList("BOX", "ENVELOPE");
         List<Object> priceServiceResponse = Arrays.asList("DELIVERING");
 
         //Expected Response Object
         Aggregate aggregate = new Aggregate();
-        HashMap<String,List<Object>> map = new HashMap<>();
-        map.put("111111111",shipmentServiceResponse);
+        Map<String, List<Object>> map = new HashMap<>();
+        map.put(orderNumber.get(0).toString(), shipmentServiceResponse);
         aggregate.setShipments(map);
 
         map = new HashMap<>();
-        map.put("111111111",priceServiceResponse);
+        map.put(orderNumber.get(0).toString(), priceServiceResponse);
         aggregate.setPricing(map);
 
-        when(aggregateService.getShipmentOrderDetails(anyLong()))
-                .thenReturn(CompletableFuture.completedFuture(shipmentResponseString));
-        when(aggregateService.getTrackStatusDetails(anyLong()))
-                .thenReturn(CompletableFuture.completedFuture(null));
-        when(aggregateService.getPricingDetails(anyString()))
-                .thenReturn(CompletableFuture.completedFuture(pricingResponseString));
-
         //WHEN
-        ResponseEntity<Aggregate> result = aggregateController.getAllDetails(shipmentOrderNumber,null,pricing);
+        when(this.aggregateService.getAllApiAggregateDetails(orderNumber, null, pricing))
+                .thenReturn(aggregate);
+
+        ResponseEntity<Aggregate> result = this.aggregateController.getAggregateDetails(orderNumber, null, pricing);
 
         //THEN
-        assertEquals("Compare responses ",aggregate, result.getBody());
+        assertEquals("Compare responses ", aggregate, result.getBody());
+        assertEquals("Compare responses ", aggregate.getShipments(), result.getBody().getShipments());
+        assertEquals("Compare responses ", aggregate.getTrack(), result.getBody().getTrack());
+        assertEquals("Compare responses ", aggregate.getPricing(), result.getBody().getPricing());
+    }
+
+    @Test
+    public void getAllApiResponseForAllNullPara() throws Throwable {
+        //GIVEN
+        Aggregate aggregate = new Aggregate();
+        Map<String, List<Object>> map = new HashMap<>();
+        aggregate.setShipments(map);
+        aggregate.setPricing(map);
+        aggregate.setPricing(map);
+
+        //WHEN
+        when(this.aggregateService.getAllApiAggregateDetails(null, null, null))
+                .thenReturn(aggregate);
+
+        ResponseEntity<Aggregate> result = this.aggregateController.getAggregateDetails(null, null, null);
+
+        //THEN
+        assertEquals("Compare responses:", aggregate, result.getBody());
     }
 
 }
